--- a/Views/Books/Details.cshtml
+++ b/Views/Books/Details.cshtml
@@ -46,6 +46,18 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Category)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.User)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.User.Name)
+        </dd>
+        <dt class="col-sm-2">
+            Profit
+        </dt>
+        <dd class="col-sm-10">
+            @Model.profit()
+        </dd>
     </dl>
 </div>
 <div>
