--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -19,4 +19,8 @@ html {
 
 body {
   margin-bottom: 60px;
+  background-image: url("/Images/saibatsu.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  color: white;
 }
