--- a/Views/Books/Details.cshtml
+++ b/Views/Books/Details.cshtml
@@ -50,7 +50,7 @@
             @Html.DisplayNameFor(model => model.User)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.User.Name)
+            <a asp-area="" asp-controller="Users" asp-action="Details" asp-route-id="@Model.User.Id">@Html.DisplayFor(model=> model.User.Name)</a>
         </dd>
         <dt class="col-sm-2">
             Profit
