--- a/Views/Users/Details.cshtml
+++ b/Views/Users/Details.cshtml
@@ -5,37 +5,27 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>@Html.DisplayFor(model => model.Name)</h1>
 
 <div>
-    <h4>User</h4>
     <hr />
     <table class ="table table-hover">
         <thead class="table-primary">
             <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Name)
+            <tr>
+                <th @* rowspan="@(Model.Books.Count + 1)" *@>
+                    Book Titles
                 </th>
-                <th>
-                    @Html.DisplayFor(model => model.Name)
-                </th>
+                    @foreach (Book book in Model.Books)
+                    {
+                <tr>
+                    <td>
+                        <a asp-area="" asp-controller="Books" asp-action="Details" asp-route-id="@book.Id">@book.Title</a>
+                    </td>
+                </tr>
+                    }
             </tr>
         </thead>
-        <tbody class="table-secondary">
-            <tr>
-            <th rowspan="@(Model.Books.Count + 1)">
-                Book Titles
-            </th>
-                @foreach (Book book in Model.Books)
-                {
-                    <tr>
-                        <td>
-                            <a asp-area="" asp-controller="Books" asp-action="Details" asp-route-id="@book.Id">@book.Title</a>
-                        </td>
-                    </tr>
-                }
-            </tr>
-        </tbody>
     </table>
 </div>
 
