--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -19,8 +19,23 @@ html {
 
 body {
   margin-bottom: 60px;
-  background-image: url("/Images/saibatsu.png");
+  background-image: url("/Images/LibraryBackground.jpg");
+  background-color: white;
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size:auto;
   color: white;
 }
+
+/*.navbar{
+    position: fixed;
+    width: 100%;
+    z-index: 1;
+} 
+
+.mainbody {
+    position: absolute;
+    top: 100px;
+    left: auto;
+    width: auto;
+    height: auto;
+}*/
