--- a/Views/Books/Create.cshtml
+++ b/Views/Books/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model LibraryCollectionWebApplication.Models.Book
+﻿@model LibraryCollectionWebApplication.Models.ViewModels.BookUpdateViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -39,9 +39,8 @@
                 <span asp-validation-for="Worth" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Category" class="control-label"></label>
-                <input asp-for="Category" class="form-control" />
-                <span asp-validation-for="Category" class="text-danger"></span>
+                <label asp-for="CategoryId" class="control-label"></label>
+                <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="UserId" class="control-label"></label>
