--- a/Views/Users/Details.cshtml
+++ b/Views/Users/Details.cshtml
@@ -14,13 +14,13 @@
             <tr>
             <tr>
                 <th @* rowspan="@(Model.Books.Count + 1)" *@>
-                    Book Titles
+                    Book Collection
                 </th>
                     @foreach (Book book in Model.Books)
                     {
                 <tr>
                     <td>
-                        <a asp-area="" asp-controller="Books" asp-action="Details" asp-route-id="@book.Id">@book.Title</a>
+                        <a class="a-dark" asp-area="" asp-controller="Books" asp-action="Details" asp-route-id="@book.Id">@book.Title</a>
                     </td>
                 </tr>
                     }
