--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -19,23 +19,27 @@ html {
 
 body {
   margin-bottom: 60px;
-  background-image: url("/Images/LibraryBackground.jpg");
-  background-color: white;
+  background-image: url("/Images/saibatsu.png");
+  background-color: black;
   background-repeat: no-repeat;
-  background-size:auto;
+  background-size:100%;
+  background-position: center;
   color: white;
 }
 
-/*.navbar{
-    position: fixed;
+.navbar{
+    position: relative;
     width: 100%;
+    height: 50px;
     z-index: 1;
+    top: 0;
+    margin-bottom: 25px;
 } 
 
-.mainbody {
-    position: absolute;
-    top: 100px;
-    left: auto;
-    width: auto;
-    height: auto;
-}*/
+h1, h2, h3, h4, p,a{
+    color: white;
+}
+
+.a-dark{
+    color: black;
+}
