--- a/Views/Users/Details.cshtml
+++ b/Views/Users/Details.cshtml
@@ -1,11 +1,11 @@
-﻿@model LibraryCollectionWebApplication.Models.User
+﻿@model IEnumerable<LibraryCollectionWebApplication.Models.Collection>
 
 
 @{
     ViewData["Title"] = "Details";
 }
 
-<h1>@Html.DisplayFor(model => model.Name)</h1>
+@* <h1>@Html.DisplayFor(model => model.Name)</h1> *@
 
 <div>
     <hr />
@@ -16,11 +16,11 @@
                 <th @* rowspan="@(Model.Books.Count + 1)" *@>
                     Book Collection
                 </th>
-                    @foreach (Book book in Model.Books)
+                    @foreach (var item in Model)
                     {
                 <tr>
                     <td>
-                        <a class="a-dark" asp-area="" asp-controller="Books" asp-action="Details" asp-route-id="@book.Id">@book.Title</a>
+                        <a class="a-dark" asp-area="" asp-controller="Books" asp-action="Details" asp-route-id="@item.BookID">@item.Book?.Title</a>
                     </td>
                 </tr>
                     }
@@ -30,6 +30,5 @@
 </div>
 
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
