--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                                 <a class="dropdown-item" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="Collections" asp-action="Index">Collections</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Separated link</a>
+                                <a class="dropdown-item" asp-controller="Tags" asp-action="Index">Tags</a>
                             </div>
                         </li>
                         <li class="nav-item">
