--- a/Views/Books/Edit.cshtml
+++ b/Views/Books/Edit.cshtml
@@ -43,6 +43,9 @@
                 <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
                 <span asp-validation-for="CategoryId" class="text-danger"></span>
             </div>
+            <fieldset>
+                @Html.EditorFor(x => x.Tags)
+            </fieldset>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
